related work in progress.

--- a/icra.bib
+++ b/icra.bib
@@ -1,584 +1,3 @@
-@inproceedings{Abe:2007,
- author = {Abe, Yeuhi and da Silva, Marco and Popovi\'{c}, Jovan},
- title = {Multiobjective control with frictional contacts},
- booktitle = {Proceedings of the 2007 ACM SIGGRAPH/Eurographics symposium on Computer animation},
- series = {SCA '07},
- year = {2007},
- isbn = {978-1-59593-624-0},
- location = {San Diego, California},
- pages = {249--258},
- numpages = {10},
-
-}
-
-
-@article{Allard:2010,
- author = {Allard, J\'{e}r\'{e}mie and Faure, Fran\c{c}ois and Courtecuisse, Hadrien and Falipou, Florent and Duriez, Christian and Kry, Paul G.},
- title = {Volume contact constraints at arbitrary resolution},
- journal = {ACM Trans. Graph.},
- volume = {29},
- issue = {4},
- month = {July},
- year = {2010},
- issn = {0730-0301},
- pages = {82:1--82:10},
- articleno = {82},
- numpages = {10},
-}
-
-@ARTICLE{Anitescu:1997,
-    author = {M. Anitescu and F. A. Potra},
-    title = {Formulating Dynamic Multi-rigid-body Contact Problems with Friction as Solvable Linear Complementarity Problems},
-    journal = {Nonlinear Dynamics},
-    year = {1997},
-    volume = {14},
-    pages = {231--247}
-}
-
-@article{Barbic:2008,
-  author =        {Jernej Barbi\v{c} and Jovan Popovi{\'{c}}},
-  journal =       {ACM Trans. on Graphics (SIGGRAPH Asia 2008)},
-  title =         "Real-time Control of Physically Based Simulations using Gentle Forces",
-  volume =        "27",
-  number =        "5",
-  year =          "2008",
-  pages =         "163:1--163:10"
-}
-
-
-@article{Barbic:2009,
-  author =        {Jernej Barbi\v{c} and Marco da Silva and Jovan Popovi{\'{c}}},
-  journal =       {ACM Trans. on Graphics (SIGGRAPH 2009)},
-  number =        "3",
-  title =         "Deformable Object Animation Using Reduced Optimal Control",
-  volume =        "28",
-  year =          "2009",
-}
-
-@article{Barbic:2005,
-  author = "Jernej Barbi\v{c} and Doug L. James",
-  title = "Real-Time Subspace Integration for {S}t. {V}enant-{K}irchhoff Deformable Models",
-  year = "2005",
-  month = aug,
-  journal = "ACM Transactions on Graphics (SIGGRAPH 2005)",
-  volume = "24",
-  number = "3",
-  pages = "982--990",
-}
-
-@inproceedings{Baraff:1998,
- author = {Baraff, David and Witkin, Andrew},
- title = {Large steps in cloth simulation},
- booktitle = {Proceedings of the 25th annual conference on Computer graphics and interactive techniques},
- series = {SIGGRAPH '98},
- year = {1998},
- isbn = {0-89791-999-8},
- pages = {43--54},
- numpages = {12},
-}
-
-@article{Bargteil:2007,
- author = {Bargteil, Adam W. and Wojtan, Chris and Hodgins, Jessica K. and Turk, Greg},
- title = {A finite element method for animating large viscoplastic flow},
- journal = {ACM Trans. Graph.},
- issue_date = {July 2007},
- volume = {26},
- issue = {3},
- month = {July},
- year = {2007},
- issn = {0730-0301},
- articleno = {16},
-}
-
-@book{Bathe:2007,
-  author = {Bathe, K.-J.},
-  title = {Finite Element Procedures},
-  publisher = {Prentice-Hall},
-  year = 2007,
-  address = {London}
-}
-
-@article{Bergou:2007,
-         title = {{TRACKS: Toward Directable Thin Shells}},
-         author = {Mikl{\'{o}}s Bergou and Saurabh Mathur and Max Wardetzky and Eitan Grinspun},
-         journal = {ACM Transactions on Graphics (SIGGRAPH)},
-         volume = {26},
-         number = {3},
-         pages = {50:1--50:10},
-         year = {2007},
-         month = {jul}
-}
-
-@inproceedings{Bridson:2002,
- author = {Bridson, Robert and Fedkiw, Ronald and Anderson, John},
- title = {Robust treatment of collisions, contact and friction for cloth animation},
- booktitle = {Proceedings of the 29th annual conference on Computer graphics and interactive techniques},
- series = {SIGGRAPH '02},
- year = {2002},
- isbn = {1-58113-521-1},
- location = {San Antonio, Texas},
- pages = {594--603},
- numpages = {10},
-}
-
-
-@article{Chen:1992,
- author = {Chen, David T. and Zeltzer, David},
- title = {Pump it up: computer animation of a biomechanically based model of muscle using the finite element method},
- journal = {SIGGRAPH Comput. Graph.},
- volume = {26},
- issue = {2},
- month = {July},
- year = {1992},
- issn = {0097-8930},
- pages = {89--98},
- numpages = {10},
-}
-
-@inproceedings{DiLorenzo:2008,
- author = {DiLorenzo, Paul C. and Zordan, Victor B. and Sanders, Benjamin L.},
- title = {Laughing out loud: control for modeling anatomically inspired laughter using audio},
- booktitle = {ACM SIGGRAPH Asia 2008 papers},
- series = {SIGGRAPH Asia '08},
- year = {2008},
- location = {Singapore},
- pages = {125:1--125:8},
- articleno = {125},
- numpages = {8},
-}
-
-@article{Erleben:2007,
- author = {Erleben, Kenny},
- title = {Velocity-based shock propagation for multibody dynamics animation},
- journal = {ACM Trans. Graph.},
- volume = {26},
- issue = {2},
- month = {June},
- year = {2007},
- issn = {0730-0301},
- articleno = {12},
-}
-
-@article{FauGilBouPai:2011,
-author = {Fran\c{c}ois Faure and Benjamin Gilles and Guillaume Bousquet and Dinesh Pai},
-title = {Sparse Meshless Models of Complex Deformable Solids},
-journal = {ACM Trans. Graph.},
-volume = 30,
-number = {4},
-note = {Special Issue: Proceedings of ACM SIGGRAPH 2011},
-month = jul,
-year = 2011
-}
-
-@inproceedings{Irving:2004,
- author = {Irving, G. and Teran, J. and Fedkiw, R.},
- title = {Invertible finite elements for robust simulation of large deformation},
- booktitle = {Proceedings of the 2004 ACM SIGGRAPH/Eurographics symposium on Computer animation},
- series = {SCA '04},
- year = {2004},
- isbn = {3-905673-14-2},
- location = {Grenoble, France},
- pages = {131--140},
- numpages = {10},
-}
-
-@article{Irving:2007,
- author = {Irving, Geoffrey and Schroeder, Craig and Fedkiw, Ronald},
- title = {Volume conserving finite element simulations of deformable models},
- journal = {ACM Trans. Graph.},
- issue_date = {July 2007},
- volume = {26},
- issue = {3},
- month = {July},
- year = {2007},
- issn = {0730-0301},
- articleno = {13},
-}
-
-@article{Jain:2009,
- author = {Sumit Jain and Yuting Ye and C. Karen Liu},
- title = {Optimization-Based Interactive Motion Synthesis},
- journal = {ACM Transaction on Graphics},
- volume = {28},
- number = {1},
- year = {2009},
- pages = {1--10},
-}
-
-
-@article{James:2003,
- author = {James, Doug L. and Pai, Dinesh K.},
- title = {Multiresolution {G}reen's function methods for interactive simulation of large-scale elastostatic objects},
- journal = {ACM Trans. Graph.},
- volume = {22},
- issue = {1},
- month = {January},
- year = {2003},
- issn = {0730-0301},
- pages = {47--82},
- numpages = {36},
-}
-
-@article{Kaufman:2008,
- author = {Kaufman, Danny M. and Sueda, Shinjiro and James, Doug L. and Pai, Dinesh K.},
- title = {Staggered projections for frictional contact in multibody systems},
- journal = {ACM Trans. Graph.},
- volume = {27},
- issue = {5},
- month = {December},
- year = {2008},
- issn = {0730-0301},
- pages = {164:1--164:11},
- articleno = {164},
- numpages = {11},
-}
-
-@article{Kier:1985,
- author = {Kier, W. M.},
- title = {Tongues, tentacles and trunks: The biomechanics of movement in muscular-hydrostats},
- journal = {Zoological Journal of the Linnean Society},
- volume = {83},
- year = {1985},
- pages = {307--324},
-}
-
-
-@article{Kim:2009,
- author = {Kim, Theodore and James, Doug L.},
- title = {Skipping steps in deformable simulation with online model reduction},
- journal = {ACM Trans. Graph.},
- issue_date = {December 2009},
- volume = {28},
- issue = {5},
- month = {December},
- year = {2009},
- issn = {0730-0301},
- pages = {123:1--123:9},
- articleno = {123},
- numpages = {9},
-}
-
-@article{Kim:2011:DCO,
-  author = "Junggon Kim and Nancy S. Pollard",
-  title = "Direct Control of Simulated Non-human Characters",
-  year = "2011",
-  month = jul,
-  journal = "IEEE Computer Graphics and Applications",
-  volume = "31",
-  number = "4",
-  pages = "56--65",
-}
-
-@article{Kim:2011,
-  author = "Junggon Kim and Nancy S. Pollard",
-  title = "Fast Simulation of Skeleton-Driven Deformable Body Characters",
-  year = "2011",
-  month = "{O}ctober",
-  journal = "ACM Transactions on Graphics",
-  volume = "30",
-  number = "5",
-}
-
-@inproceedings{Kondo:2005,
- author = {Kondo, Ryo and Kanai, Takashi and Anjyo, Ken-ichi},
- title = {Directable animation of elastic objects},
- booktitle = {Proceedings of the 2005 ACM SIGGRAPH/Eurographics symposium on Computer animation},
- series = {SCA '05},
- year = {2005},
- isbn = {1-59593-198-8},
- location = {Los Angeles, California},
- pages = {127--134},
- numpages = {8},
-}
-
-
-@article{Lasseter:1987,
- author = {Lasseter, John},
- title = {Principles of traditional animation applied to {3D} computer animation},
- journal = {SIGGRAPH Comput. Graph.},
- volume = {21},
- issue = {4},
- month = {August},
- year = {1987},
- issn = {0097-8930},
- pages = {35--44},
- numpages = {10},
-}
-
-@article{Lee:2006,
-	author = "Sung-Hee Lee and Demetri Terzopoulos",
-	title = "{Heads Up! Biomechanical Modeling and Neuromuscular Control of the Neck}",
-	journal = "{ACM Transactions on Graphics}",
-	volume = 25,
-	number = 3,
-	year = 2006,
-	month = "July",
-	pages = "1188--1198"
-}
-
-@article{Lee:2009:CBM,
- author = {Lee, Sung-Hee and Sifakis, Eftychios and Terzopoulos, Demetri},
- title = {Comprehensive biomechanical modeling and simulation of the upper body},
- journal = {ACM Trans. Graph.},
- issue_date = {August 2009},
- volume = {28},
- issue = {4},
- month = {September},
- year = {2009},
- issn = {0730-0301},
- pages = {99:1--99:17},
- articleno = {99},
- numpages = {17},
-}
-
-
-@inproceedings{Lloyd:2005,
- author = {Lloyd, J.E.},
- title = {Fast Implementation of {L}emke's Algorithm for Rigid Body Contact Simulation},
- booktitle = {Proceedings of the 2005 IEEE International Conference on Robotics and Automation},
- series = {ICRA 2005},
- year = {2005},
- pages = {4538--4543},
-}
-
-@article{Martin:2011,
- author = {Martin, Sebastian and Thomaszewski, Bernhard and Grinspun, Eitan and Gross, Markus},
- title = {Example-based elastic materials},
- journal = {ACM Trans. Graph.},
- issue_date = {July 2011},
- volume = {30},
- issue = {4},
- month = aug,
- year = {2011},
- issn = {0730-0301},
- pages = {72:1--72:8},
- articleno = {72},
- numpages = {8},
-}
-
-@article{Macchietto:2009,
- author = {Macchietto, Adriano and Zordan, Victor and Shelton, Christian R.},
- title = {Momentum control for balance},
- journal = {ACM Trans. Graph.},
- issue_date = {August 2009},
- volume = {28},
- issue = {3},
- month = jul,
- year = {2009},
- issn = {0730-0301},
- pages = {80:1--80:8},
- articleno = {80},
- numpages = {8},
-}
-
-@article{Miller:1988,
- author = {Miller, Gavin S. P.},
- title = {The motion dynamics of snakes and worms},
- journal = {SIGGRAPH Comput. Graph.},
- volume = {22},
- issue = {4},
- month = {June},
- year = {1988},
- issn = {0097-8930},
- pages = {169--173},
- numpages = {5},
-}
-
-@inproceedings{Muller:2002,
- author = {M\"{u}ller, Matthias and Dorsey, Julie and McMillan, Leonard and Jagnow, Robert and Cutler, Barbara},
- title = {Stable real-time deformations},
- booktitle = {Proceedings of the 2002 ACM SIGGRAPH/Eurographics symposium on Computer animation},
- series = {SCA '02},
- year = {2002},
- isbn = {1-58113-573-4},
- location = {San Antonio, Texas},
- pages = {49--54},
- numpages = {6},
-}
-
-@inproceedings{Muller:2004,
- author = {M\"{u}ller, M. and Keiser, R. and Nealen, A. and Pauly, M. and Gross, M. and Alexa, M.},
- title = {Point based animation of elastic, plastic and melting objects},
- booktitle = {Proceedings of the 2004 ACM SIGGRAPH/Eurographics symposium on Computer animation},
- series = {SCA '04},
- year = {2004},
- isbn = {3-905673-14-2},
- location = {Grenoble, France},
- pages = {141--151},
- numpages = {11},
-}
-
-
-
-@article{Muller:2005,
- author = {M\"{u}ller, Matthias and Heidelberger, Bruno and Teschner, Matthias and Gross, Markus},
- title = {Meshless deformations based on shape matching},
- journal = {ACM Trans. Graph.},
- volume = {24},
- issue = {3},
- month = {July},
- year = {2005},
- issn = {            0730-0301      },
- pages = {471--478},
- numpages = {8},
-}
-
-@article{Nealen:2006,
- title={Physically Based Deformable Models in Computer Graphics},
- volume={25},
- url={http://doi.wiley.com/10.1111/j.1467-8659.2006.01000.x},
- number={4}, journal={Computer Graphics Forum},
- publisher={John Wiley & Sons},
- author={Nealen, Andrew and M\"uller, Matthias and Keiser, Richard and Boxerman, Eddy and Carlson, Mark},
- year={2006},
- pages={809--836}
-}
-
-@inproceedings{NPF05,
-author = {Matthieu Nesme and Yohan Payan and Fran\c{c}ois Faure},
-title = {Efficient, Physically Plausible Finite Elements},
-booktitle = {Eurographics 2005, Short papers, August, 2005},
-editor = {John Dingliana and Fabio Ganovelli},
-address = {Trinity College, Dublin, Irlande},
-keywords = {animation, physical model, elasticity, finite elements},
-year = 2005
-}
-
-@inproceedings{O'Brien:1999,
- author = {O'Brien, James F. and Hodgins, Jessica K.},
- title = {Graphical modeling and animation of brittle fracture},
- booktitle = {Proceedings of the 26th annual conference on Computer graphics and interactive techniques},
- series = {SIGGRAPH '99},
- year = {1999},
- isbn = {0-201-48560-5},
- pages = {137--146},
- numpages = {10},
-}
-
-@book{Cottle:1992,
-  author = {Cottle, R.W and Pang, J.S and Stone, E.R},
-  title = {The Linear Complementarity Problem},
-  publisher = {Academic Press},
-  year = 1992,
-}
-
-@Article{Otaduy:2009,
-  author       = "Otaduy, Miguel A. and Tamstorf, Rasmus and Steinemann, Denis and Gross, Markus",
-  title        = "Implicit Contact Handling for Deformable Objects",
-  journal      = "Computer Graphics Forum (Proc. of Eurographics)",
-  number       = "2",
-  volume       = "28",
-  month        = "apr",
-  year         = "2009",
-  url          = "http://www.gmrv.es/Publications/2009/OTSG09"
-}
-
-@article{Rivers:2007,
- author = {Rivers, Alec R. and James, Doug L.},
- title = {Fast{LSM}: fast lattice shape matching for robust real-time deformation},
- journal = {ACM Trans. Graph.},
- issue_date = {July 2007},
- volume = {26},
- issue = {3},
- month = {July},
- year = {2007},
- issn = {0730-0301},
- articleno = {82},
-}
-
-@book{Thomas:1981,
-  author = {Thomas, F. and Johston, O.},
-  booktitle = {The {I}llusion of Life, Disney Animation},
-  publisher = {Hyperion, New York},
-  title = {The Illusion of Life, Disney Animation},
-  year = 1981,
-}
-
-@article{Sifakis:2005,
- author = {Sifakis, Eftychios and Neverov, Igor and Fedkiw, Ronald},
- title = {Automatic determination of facial muscle activations from sparse motion capture marker data},
- journal = {ACM Trans. Graph.},
- volume = {24},
- issue = {3},
- month = {July},
- year = {2005},
- issn = {0730-0301},
- pages = {417--425},
- numpages = {9},
-}
-
-@inproceedings{Teran:2003,
- author = {Teran, J. and Blemker, S. and Hing, V. Ng Thow and Fedkiw, R.},
- title = {Finite volume methods for the simulation of skeletal muscle},
- booktitle = {Proceedings of the 2003 ACM SIGGRAPH/Eurographics symposium on Computer animation},
- series = {SCA '03},
- year = {2003},
- isbn = {1-58113-659-5},
- location = {San Diego, California},
- pages = {68--74},
- numpages = {7},
-}
-
-@article{Teran:2005,
- author = {Teran, Joseph and Sifakis, Eftychios and Blemker, Silvia S. and Ng-Thow-Hing, Victor and Lau, Cynthia and Fedkiw, Ronald},
- title = {Creating and Simulating Skeletal Muscle from the Visible Human Data Set},
- journal = {IEEE Transactions on Visualization and Computer Graphics},
- volume = {11},
- issue = {3},
- month = {May},
- year = {2005},
- issn = {1077-2626},
- pages = {317--328},
- numpages = {12},
-}
-
-@inproceedings{Terzopoulos:1987,
- author = {Terzopoulos, Demetri and Platt, John and Barr, Alan and Fleischer, Kurt},
- title = {Elastically deformable models},
- booktitle = {Proceedings of the 14th annual conference on Computer graphics and interactive techniques},
- series = {SIGGRAPH '87},
- year = {1987},
- isbn = {0-89791-227-6},
- pages = {205--214},
- numpages = {10},
-}
-
-@inproceedings{Tsang:2005,
- author = {Tsang, Winnie and Singh, Karan and Fiu Eugene},
- title = {Helping hand: an anatomically accurate inverse dynamics solution for unconstrained hand motion},
- booktitle = {Proceedings of the 2005 ACM SIGGRAPH/Eurographics symposium on Computer animation},
- series = {SCA '05},
- year = {2005},
- isbn = {1-59593-198-8},
- location = {Los Angeles, California},
- pages = {319--328},
- numpages = {10},
-}
-
-@article{Sueda:2008,
- author = {Sueda, Shinjiro and Kaufman, Andrew and Pai, Dinesh K.},
- title = {Musculotendon simulation for hand animation},
- journal = {ACM Trans. Graph.},
- issue_date = {August 2008},
- volume = {27},
- issue = {3},
- month = {August},
- year = {2008},
- issn = {0730-0301},
- pages = {83:1--83:8},
- articleno = {83},
- numpages = {8},
-}
-
-@ARTICLE{Stewart:1996,
-    author = {David Stewart and J. C. Trinkle},
-    title = {An Implicit Time-Stepping Scheme for Rigid Body Dynamics with {C}oulomb Friction},
-    journal = {International Journal of Nnumerical Methods in Engineering},
-    year = {1996},
-    volume = {39},
-    pages = {2673--2691}
-}
-
 @conference{Tu:1994,
   title={{Artificial fishes: Physics, locomotion, perception, behavior}},
   author={Tu, X. and Terzopoulos, D.},
@@ -598,66 +17,6 @@ year = 2005
  year = {2008},
  issn = {            0730-0301      },
  pages = {1--8},
-}
-
-@inproceedings{Yin:2007,
- author = {Yin, KangKang and Loken, Kevin and van de Panne, Michiel},
- title = {{SIMBICON}: simple biped locomotion control},
- booktitle = {ACM SIGGRAPH 2007 papers},
- series = {SIGGRAPH '07},
- year = {2007},
- location = {San Diego, California},
- articleno = {105},
-}
-
-@article{Zordan:2006,
- author = {Zordan, Victor B. and Celly, Bhrigu and Chiu, Bill and DiLorenzo, Paul C.},
- title = {Breathe easy: model and control of human respiration for computer animation},
- journal = {Graph. Models},
- volume = {68},
- issue = {2},
- month = {March},
- year = {2006},
- issn = {1524-0703},
- pages = {113--132},
- numpages = {20},
-}
-
-@article{Bai:2011,
- author = {Bai, Lijie and Mitchell, John E. and Pang, Jong-Shi},
- title = {On convex quadratic programs with linear complementarity constraints},
- journal = {In submission},
- issue_date = {September 2011},
- year = {2011},
-}
-
-@article{Braun:2005,
- author = {Braun, Stephen and Mitchell, John E.},
- title = {A semidefinite programming heuristic for quadratic programming problems with complementarity constraints},
- journal = {Computational Optimization and Application},
- issue_date = {May 2005},
- volume = {31},
- issue = {1},
- pages = {5--29},
- year = {2005},
-}
-
-@article{Hu:2008,
- author = {Hu, Jing and Mitchell, John E. and Pang, Jong-Shi and Bennett, Kristin P. and Kunapuli, Gautam},
- title = {On the global solution of linear programs with linear complementarity constraints},
- journal = {SIAM Journal on Optimization},
- volume = {19},
- issue = {1},
- pages = {445--471},
- year = {2008},
-}
-
-@misc{Si:2006,
-	author = {Si, Hang},
-	title = {TetGen: A quality tetrahedral mesh generator and a {3D} {D}elaunay triangulator},
-	month = {January},
-	year = {2006},
-    url = {http://wias-berlin.de/software/tetgen/},
 }
 
 @InProceedings{Hodgins:1995:AHA,
@@ -2494,7 +1853,7 @@ pages = {1113--1119},
 
 @article{Mordatch:2015,
   author = {Mordatch, Igor and Lowrey, Kendall and Todorov, Emanuel},
-  journal = {IEEE International Conference on Robotics and Automation},
+  journal = {IEEE/RAS International Conference on Intelligent Robots and Systems},
   title = {Ensemble-CIO: Full-Body Dynamic Motion Planning that Transfers to Physical Humanoids},
   year = {2015},
 }
@@ -2977,22 +2336,6 @@ MacIver, M.A.},
  address = {New York, NY, USA},
  keywords = {control, human animation, limit cycles, locomotion, physically-based modeling},
 } 
-
-
-@inproceedings{Yin:2007:SIM,
- author = {Yin, KangKang and Loken, Kevin and van de Panne, Michiel},
- title = {SIMBICON: simple biped locomotion control},
- booktitle = {ACM SIGGRAPH 2007 papers},
- series = {SIGGRAPH '07},
- year = {2007},
- location = {San Diego, California},
- articleno = {105},
- url = {http://doi.acm.org/10.1145/1275808.1276509},
- doi = {http://doi.acm.org/10.1145/1275808.1276509},
- acmid = {1276509},
- publisher = {ACM},
- address = {New York, NY, USA},
- }
 
 @inproceedings{Sok:2007:SBB,
  author = {Sok, Kwang Won and Kim, Manmyung and Lee, Jehee},
@@ -3823,4 +3166,135 @@ issn = "0027-8424",
   title = {Covariance matrix adaptation: source code},
   url = {https://www.lri.fr/~hansen/cmaes\_inmatlab.html},
   year = 2006
+}
+
+@inproceedings{Faloutsos:2003,
+  author = {Faloutsos, Petros and van de Panne, Michiel and Terzopoulos, Demetri},
+  booktitle = {ICRA},
+  pages = {917-924},
+  publisher = {IEEE},
+  title = {Autonomous reactive control for simulated humanoids.},
+  year = 2003
+}
+
+@inproceedings{Iida:2004,
+  author = {Iida, Shingo and Kanoh, Masayoshi and Kato, Shohei and Itoh, Hidenori},
+  booktitle = {IROS},
+  pages = {3153-3157},
+  publisher = {IEEE},
+  title = {Reinforcement learning for motion control of humanoid robots.},
+  year = 2004
+}
+
+
+@inproceedings{Pchelkin:2010,
+   author = {Pchelkin, Stepan and Shiriaev, Anton S. and Freidovich, Leonid B. and Mettin, Uwe and Gusev, Sergei V. and Kwon, Woong},
+  booktitle = {CDC},
+  pages = {1136-1141},
+  publisher = {IEEE},
+  title = {Natural sit-down and chair-rise motions for a humanoid robot.},
+  year = 2010
+}
+
+@inproceedings{Mistry:2010,
+  author = {Mistry, Michael and Murai, Akihiko and Yamane, Katsu and Hodgins, Jessica K.},
+  booktitle = {Humanoids},
+  pages = {218-223},
+  publisher = {IEEE},
+  title = {Sit-to-stand task on a humanoid robot from human demonstration.},
+  year = 2010
+}
+
+@article{Bahar:2014,
+{
+  author = {Mohd Bazli Bahar and Muhammad Fahmi Miskon and Norazhar Abu Bakar and Fariz Ali and Ahmad Zaki Shukor},
+ title = {STS Motion Control Using Humanoid Robot},
+ journal = {Research Journal of Applied Sciences, Engineering and Technology},
+ volume = {8},
+ number = {1},
+ year = {2014},
+ pages = {95-108},
+}
+
+@article{Hirukawa:2005,
+ author = {Hirukawa, Hirohisa and Kajita, Shuuji and Kanehiro, Fumio and Kaneko, Kenji and Isozumi, Takakatsu},
+ title = {The Human-size Humanoid Robot That Can Walk, Lie Down and Get Up},
+ journal = {Int. J. Rob. Res.},
+ issue_date = {September 2005},
+ volume = {24},
+ number = {9},
+ month = sep,
+ year = {2005},
+ issn = {0278-3649},
+ pages = {755--769},
+ numpages = {15},
+ url = {http://dx.doi.org/10.1177/0278364905057217},
+ doi = {10.1177/0278364905057217},
+ acmid = {1082840},
+ publisher = {Sage Publications, Inc.},
+ address = {Thousand Oaks, CA, USA},
+ keywords = {biped walking, getting up motion, human-size, humanoid robot},
+}
+
+@inproceedings{Faloutsos:2001,
+ author = {Faloutsos, Petros and van de Panne, Michiel and Terzopoulos, Demetri},
+ title = {Composable Controllers for Physics-based Character Animation},
+ booktitle = {Proceedings of the 28th Annual Conference on Computer Graphics and Interactive Techniques},
+ series = {SIGGRAPH '01},
+ year = {2001},
+ isbn = {1-58113-374-X},
+ pages = {251--260},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/383259.383287},
+ doi = {10.1145/383259.383287},
+ acmid = {383287},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {character animation, computer animation, physics-based animation control, physics-based modeling},
+} 
+
+@inproceedings{morimoto:1998,
+  title={Reinforcement learning of dynamic motor sequence: Learning to stand up},
+  author={Morimoto, Jun and Doya, Kenji},
+  booktitle={Intelligent Robots and Systems, 1998. Proceedings., 1998 IEEE/RSJ International Conference on},
+  volume={3},
+  pages={1721--1726},
+  year={1998},
+  organization={IEEE}
+}
+
+@article{lin:2012,
+  title={Animating rising up from various lying postures and environments},
+  author={Lin, Wen-Chieh and Huang, Yi-Jheng},
+  journal={The Visual Computer},
+  volume={28},
+  number={4},
+  pages={413--424},
+  year={2012},
+  publisher={Springer}
+}
+
+@inproceedings{Kanehiro:2007,
+  author = {Kanehiro, Fumio and Fujiwara, Kiyoshi and Hirukawa, Hirohisa and Nakaoka, Shinichiro and Morisawa, Mitsuharu},
+  booktitle = {ICRA},
+  pages = {2540-2545},
+  publisher = {IEEE},
+  title = {Getting up Motion Planning using Mahalanobis Distance.},
+  year = 2007
+}
+
+@inproceedings{tassa:2012,
+  title={Synthesis and stabilization of complex behaviors through online trajectory optimization},
+  author={Tassa, Yuval and Erez, Tom and Todorov, Emanuel},
+  booktitle={Intelligent Robots and Systems (IROS), 2012 IEEE/RSJ International Conference on},
+  pages={4906--4913},
+  year={2012},
+  organization={IEEE}
+}
+
+@mastersthesis{jones:2011,
+  title={Rising Motion Controllers for Physically Simulated Characters},
+  author={Jones, Benjamin James},
+  year={2011},
+  school={The University Of British Columbia (Vancouver}
 }
